--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <welcome-file-list>
-        <welcome-file>main</welcome-file>
+        <welcome-file>main.jsp</welcome-file>
     </welcome-file-list>
     <response-character-encoding>UTF-8</response-character-encoding>
     <request-character-encoding>UTF-8</request-character-encoding>
