--- a/spring-app/items-microservice/pom.xml
+++ b/spring-app/items-microservice/pom.xml
@@ -9,8 +9,8 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>repository</artifactId>
-
+  <artifactId>items-microservice</artifactId>
+  <packaging>jar</packaging>
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
