--- a/spring-app/items-microservice/src/main/resources/application.yml
+++ b/spring-app/items-microservice/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  jackson:
+    default-property-inclusion: non_null
   datasource:
     url: jdbc:mysql://localhost:3306/webapp
     username: ${DB_USERNAME}
@@ -6,3 +8,4 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+    show-sql: true
