moved repository logic into the autoconfigurable library that can be easily interchanged with other implementation

--- a/spring-app/items-microservice/pom.xml
+++ b/spring-app/items-microservice/pom.xml
@@ -3,7 +3,7 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>webapp</artifactId>
+    <artifactId>webapp-root</artifactId>
     <groupId>com.epam.smyrnov</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
@@ -11,19 +11,26 @@
 
   <artifactId>items-microservice</artifactId>
   <packaging>jar</packaging>
+
   <dependencies>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
+      <groupId>com.epam.smyrnov</groupId>
+      <artifactId>database-items-repository</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
+
   <properties>
     <maven.compiler.source>16</maven.compiler.source>
     <maven.compiler.target>16</maven.compiler.target>
   </properties>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
