--- a/spring-app/database-items-repository/src/main/resources/db-properties.yml
+++ b/spring-app/database-items-repository/src/main/resources/db-properties.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/webapp
+    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:webapp}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
   jpa:
