--- a/spring-app/items-microservice/pom.xml
+++ b/spring-app/items-microservice/pom.xml
@@ -18,6 +18,10 @@
       <artifactId>database-items-repository</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+    </dependency>
   </dependencies>
 
   <properties>
