--- a/spring-app/pom.xml
+++ b/spring-app/pom.xml
@@ -16,6 +16,8 @@
 	<description>Spring Boot version of EPAM external courses project</description>
 	<properties>
 		<java.version>16</java.version>
+		<maven.compiler.source>16</maven.compiler.source>
+		<maven.compiler.target>16</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
