--- a/spring-app/pom.xml
+++ b/spring-app/pom.xml
@@ -8,6 +8,17 @@
 		<version>2.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	<modules>
+		<module>items-microservice</module>
+		<module>items-repository</module>
+		<module>items-repository-db</module>
+		<module>users-microservice</module>
+		<module>users-repository</module>
+		<module>users-repository-db</module>
+		<module>orders-microservice</module>
+		<module>orders-repository</module>
+		<module>orders-repository-db</module>
+	</modules>
 	<packaging>pom</packaging>
 	<groupId>com.epam.smyrnov</groupId>
 	<artifactId>webapp-root</artifactId>
