--- a/spring-app/orders-microservice/src/main/resources/bootstrap.yml
+++ b/spring-app/orders-microservice/src/main/resources/bootstrap.yml
@@ -2,6 +2,16 @@ server:
   port: 8083
 
 spring:
+  application:
+    name: orders-ms
   cloud:
     config:
       enabled: false
+    discovery:
+      enabled: true
+
+eureka:
+  client:
+    enabled: true
+    service-url:
+      default: ${EUREKA_URL:http://localhost:8761}
