--- a/spring-app/orders-microservice/src/main/resources/bootstrap.yml
+++ b/spring-app/orders-microservice/src/main/resources/bootstrap.yml
@@ -14,4 +14,4 @@ eureka:
   client:
     enabled: true
     service-url:
-      default: ${EUREKA_URL:http://localhost:8761}
+      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka}
