--- a/spring-app/orders-microservice/Dockerfile
+++ b/spring-app/orders-microservice/Dockerfile
@@ -1,5 +1,11 @@
 FROM openjdk:16-alpine
 
-ARG JAR_PATH=target/*.jar
-COPY ${JAR_PATH} ./app.jar
-ENTRYPOINT ["java", "-jar", "./app.jar"]
+ARG JAR_PATH=orders-microservice/target/*.jar
+ENV JAR_NAME=orders-microservice.jar
+
+CMD mkdir app
+WORKDIR app
+
+COPY wait-for-it.sh wait-for
+COPY ${JAR_PATH} ${JAR_NAME}
+CMD ./wait-for -t 300 eureka.docker:8761 -- java -jar ${JAR_NAME}
