--- a/spring-app/users-microservice/src/main/resources/bootstrap.yml
+++ b/spring-app/users-microservice/src/main/resources/bootstrap.yml
@@ -1,7 +1,26 @@
 server:
-  port: 8082
+  port: 8080
 
 spring:
+  application:
+    name: users-ms
   cloud:
     config:
-      enabled: false
+      enabled: true
+      discovery:
+        enabled: true
+        service-id: ${CONFIG_SERVER_ID:config-server}
+      retry:
+        initial-interval: 2500
+        max-attempts: 10
+        max-interval: 7000
+        multiplier: 1.5
+      fail-fast: true
+    discovery:
+      enabled: true
+
+eureka:
+  client:
+    enabled: true
+    service-url:
+      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka}
