implemented kafka integration (without Docker for now), DB sync if item name was changed, HATEOAS-styled response for orders, DB pagination for orders list

--- a/spring-app/items-microservice/src/main/resources/application.yml
+++ b/spring-app/items-microservice/src/main/resources/application.yml
@@ -1,3 +1,10 @@
 spring:
   jackson:
     default-property-inclusion: non_null
+  kafka:
+    producer:
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      bootstrap-servers: "[::1]:9092"
+      client-id: items-ms-producer
+      properties:
+        spring.json.type.mapping: "item:com.epam.smyrnov.items.model.dto.response.ItemResponse"
