--- a/spring-app/orders-microservice/src/main/resources/application.yml
+++ b/spring-app/orders-microservice/src/main/resources/application.yml
@@ -1,3 +1,11 @@
 spring:
   jackson:
     default-property-inclusion: non_null
+  kafka:
+    consumer:
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      client-id: orders-ms
+      bootstrap-servers: "[::1]:9092"
+      properties:
+        spring.json.trusted.packages: "*"
+        spring.json.type.mapping: "item:com.epam.smyrnov.orders.model.kafka.Item"
