--- a/spring-app/docker-compose.yml
+++ b/spring-app/docker-compose.yml
@@ -26,6 +26,8 @@ services:
     networks:
       - services-network
     environment:
+      PASSPHRASE: ${PASSPHRASE}
+      KNOWN_HOSTS: /root/.ssh/known_hosts
       EUREKA_URL: http://eureka.docker:8761/eureka
       CONFIG_SERVER_KEYSTORE_PASSWORD: ${CONFIG_KEYSTORE_PASSWORD}
 
@@ -116,6 +118,30 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
 
+  zookeeper:
+    container_name: zookeeper
+    image: confluentinc/cp-zookeeper:7.0.1
+    networks:
+      - services-network
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+
+  broker:
+    container_name: kafka
+    image: confluentinc/cp-kafka:7.0.1
+    ports:
+      - "9092:9092"
+    networks:
+      - services-network
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://kafka:29092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
 
 networks:
   services-network:
