--- a/spring-app/items-microservice/pom.xml
+++ b/spring-app/items-microservice/pom.xml
@@ -6,12 +6,16 @@
     <artifactId>microservice-parent</artifactId>
     <groupId>com.epam.smyrnov</groupId>
     <version>0.0.1-SNAPSHOT</version>
-    <relativePath/>
+    <relativePath>../microservice-parent/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>items-microservice</artifactId>
-  <packaging>jar</packaging>
+
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
 
   <dependencies>
     <dependency>
