--- a/spring-app/standalone/Dockerfile
+++ b/spring-app/standalone/Dockerfile
@@ -4,4 +4,4 @@ ARG JAR_PATH=target/*.jar
 ENV JAR_NAME=test.jar
 
 COPY ${JAR_PATH} ${JAR_NAME}
-CMD java -jar ${JAR_NAME}
+CMD java -Ddebug -jar ${JAR_NAME}
