--- a/spring-app/spring-appp/src/main/resources/bootstrap.yml
+++ b/spring-app/spring-appp/src/main/resources/bootstrap.yml
@@ -24,3 +24,7 @@ eureka:
     enabled: true
     service-url:
       defaultZone: ${EUREKA_URL:http://localhost:8761/eureka}
+
+  instance:
+    appname: spring-boot
+    instance-id: ${APPNAME:id}
