--- a/spring-app/docker-compose.yml
+++ b/spring-app/docker-compose.yml
@@ -39,7 +39,7 @@ services:
   spring-boot1:
     container_name: spring-boot1
     build:
-      context: spring-appp
+      context: springbootapp
     image: spring-boot
     ports:
       - "8080:8080"
@@ -53,7 +53,7 @@ services:
   spring-boot2:
     container_name: spring-boot2
     build:
-      context: spring-appp
+      context: springbootapp
     image: spring-boot
     ports:
       - "8081:8080"
@@ -67,7 +67,7 @@ services:
   spring-boot3:
     container_name: spring-boot3
     build:
-      context: spring-appp
+      context: springbootapp
     image: spring-boot
     ports:
       - "8082:8080"
@@ -81,7 +81,7 @@ services:
   spring-boot4:
     container_name: spring-boot4
     build:
-      context: spring-appp
+      context: springbootapp
     image: spring-boot
     ports:
       - "8083:8080"
