--- a/spring-app/springbootapp/pom.xml
+++ b/spring-app/springbootapp/pom.xml
@@ -10,7 +10,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>spring-appp</artifactId>
+  <artifactId>springbootapp</artifactId>
 
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
